--- a/ex10/src/index.html
+++ b/ex10/src/index.html
@@ -9,6 +9,12 @@
 <body>
     <div id="wrapper">
         <div id="left">
+          <footer id="main-footer">
+            <p>Copyright &copy; 2018, Sluralpright All Rights Reserved</p>
+            <div>
+              <a href="#">terms of use</a> | <a href="#">Privacy Policy</a>
+            </div>
+          </footer>
           <div id="signin">
             <div class="logo">
               <img src="https://app.pluralsight.com/id/content/img/login-logo.png" alt="pluralsight" />
@@ -24,23 +30,18 @@
               </div>
               <button type="submit" class="primary-btn">Sign In</button>
             </form>
-            <div class="links">
+            <div id="links">
               <a href="#">Forgot Password</a>
               <a href="#">Sign in with company or school</a>
             </div>
-            <div class="or">
+            <div class="hr-bar">
               <hr class="bar" />
               <span>OR</span>
               <hr class="bar" />
             </div>
             <a href="#" class="secondary-btn">Create an account</a>
           </div>
-          <footer id="main-footer">
-            <p>Copyright &copy; 2018, Sluralpright All Rights Reserved</p>
-            <div>
-              <a href="#">terms of use</a> | <a href="#">Privacy Policy</a>
-            </div>
-          </footer>
+          
         </div>
         <div id="right">
           <div id="showcase">
